# mpm_analysis

./: README.md  pyproject.toml  run.py
docs/: adding_a_new_json_format.md
examples/: ex_benchmark_noise.py  ex_critical_point_fit.py  ex_load_experimental.py  ex_paper_figure.py  ex_run_bootstrap_small.py
results/: ens_avg_ens_avg_N59_lam0.24-1.47_20260419_100830.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_103617.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_103719.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_112200.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_112413.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_112924.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_113045.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_120055.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_120236.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_120455.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_121831.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_124642.json  ens_avg_ens_avg_N59_lam0.24-1.47_20260419_125309.json  ens_avg_ens_avg_N64_lam0.24-1.50_20260415_162150.json  ens_avg_ens_avg_N64_lam0.24-1.50_20260416_131936.json  ens_avg_ens_avg_N64_lam0.24-1.50_20260416_132123.json  ens_avg_ens_avg_N64_lam0.24-1.50_20260416_132209.json  ens_avg_ens_avg_N64_lam0.24-1.50_20260419_100353.json  mpm_ens_avg_scan50_N59_lam0.24-1.47_20260419_131330.json  mpm_ens_avg_scan50_N59_lam0.24-1.47_20260419_131623.json  mpm_ens_avg_scan50_N59_lam0.24-1.47_20260419_132716.json  mpm_ens_avg_scan50_N59_lam0.24-1.47_20260419_151425.json  mpm_ens_avg_scan50_N59_lam0.24-1.47_20260419_153623.json  (+42 more)
(+98 files in other folders)
