[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeno-analysis"
version = "0.1.0"
description = "Unified analysis and plotting package for quantum Zeno effect experiments"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.0.0",
    "scipy>=1.13",
    "matplotlib>=3.10",
]

# Heavy optional dependencies — only needed for specific submodules
[project.optional-dependencies]
simulation = ["sympy>=1.14"]
fitting = ["scipy>=1.13", "lmfit>=1.3"]
all = ["sympy>=1.14", "lmfit>=1.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/zeno_analysis"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv.sources]